[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "day4_s1"
path = "day4/star1.rs"
[[bin]]
name = "day4_s2"
path = "day4/star2.rs"

[[bin]]
name = "day5_s1"
path = "day5/star1.rs"
[[bin]]
name = "day5_s2"
path = "day5/star2.rs"

[[bin]]
name = "day6_s1"
path = "day6/star1.rs"
[[bin]]
name = "day6_s2"
path = "day6/star2.rs"

[[bin]]
name = "day7_s1"
path = "day7/star1.rs"
[[bin]]
name = "day7_s2"
path = "day7/star2.rs"

[[bin]]
name = "day8_s1"
path = "day8/star1.rs"
[[bin]]
name = "day8_s2"
path = "day8/star2.rs"
